# clay

./: CMakeLists.txt
examples/angle-project-example/: CMakeLists.txt  main.c
renderers/angle/: clay_angle_extras.c  clay_renderer_angle.c
